--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
                     <img src="images/blog-3.png" alt="">
                 </div>
                 <div class="content">
-                    <a href="https://cvshaper.com/dashboard.php" class=""> Create Quotation</a>
+                    <a href="https://cvshaper.com/dashboard.php" class="btn">Quotation</a>
                     
                        
                     </div>
